src/item/styles.scss
@use "../../node_modules/@cloudscape-design/design-tokens/index.scss" as cs;

.header {
  display: flex;
  justify-items: center;
  padding: cs.$space-scaled-s cs.$space-container-horizontal;
  padding-left: calc(#{cs.$space-container-horizontal} - #{cs.$space-scaled-xs});
}

.flexible {
  flex: 1 1 min-content;
}

.handle {
  margin-top: cs.$space-scaled-xxs;
}

.children {
  margin-left: 10px;
}

.settings {
  margin-top: cs.$space-scaled-xxxs;
  margin-left: cs.$space-static-xs;
}

.fixed {
  flex: 0 0 auto;
}

.resizer {
  position: absolute;
  bottom: cs.$space-scaled-xs;
  right: cs.$space-static-s;
}

.root {
  touch-action: none;
  position: relative;
  height: 100%;
  display: grid;
}

.body {
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.content-wrapper {
  padding: 0 cs.$space-container-horizontal cs.$space-scaled-l cs.$space-container-horizontal;
  box-sizing: border-box;
  overflow: hidden;
  width: 100%;
  height: 100%;

  &-disable-paddings {
    padding: 0;
  }
}

.content {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.footer {
  flex: 0 0 auto;
  border-top: 2px solid cs.$color-border-divider-default;
  padding: cs.$space-scaled-s cs.$space-container-horizontal;
}

